--- a/index.html
+++ b/index.html
@@ -11,21 +11,18 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
-        <span>N</span>
-        <span>A</span>
-        <span>Y</span>
-        <span>L</span>
-        <span>A</span>
+        <span>P</span>
+        <span>U</span>
+        <span>T</span>
+        <span>R</span>
+        <span>I</span>
+        
+   
 
     </div>
   
     <div class="description">
-        <span>kamu pasti cape ya? coba deh buka ini</span>
+        <span>ALOOO PUTRIII, JST FOR U!!</span>
     </div>
     <div class="button">
         <button>
